--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-@import url(https://fonts.google.com/specimen/Lobster+Two);
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
 
 html {
-    font-family: 'LobsterTwo';
+    font-family: 'Lobster Two', cursive;
     background-color: #424242;
+    color: #fff;
 }
 
 body {
@@ -11,42 +12,46 @@ body {
 
 header {
     text-align: center;
+    background-blend-mode: lighten;
     background-color: #4165bb;
     padding: 10px;
 }
 
 p {
     text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     color: black;
     padding: 10px;
 }
 
-h2 {
+h3 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 5rem;
-    line-height: 5rem;
-    color: green;
+    line-height: 2rem;
+    color: white;
 }
 
 nav {
     margin: 10px;
     padding: 10px;
-    justify-content: center;
+    display: inline-block;
     
 }
 
 a {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lobster Two', cursive;
     color: white;
     text-decoration: none;
     padding: 15px;
-    justify-content: space-around;
+    font-size: 2rem;
+    flex-direction: row;
+
 }
 
 a:hover {
-    color:white;
-    background-color: #9a30cc;    
+    color: #9a30cc;
+    text-decoration: underline;
+
 }
 
 
@@ -87,6 +92,53 @@ header {
     padding: 20px;
 }
 
+
+form {
+    margin: 50px auto;
+    width: 90%;
+}
+
+.form-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.form-item label {
+    flex-basis: 150px;
+    font-size: 22px;
+}
+
+.form-item input,
+.form-item textarea {
+    flex-basis: 50%;
+    border: 2px solid  #4165bb;;
+}
+
+.form-item input:hover,
+.form-item textarea:hover {
+    border: 2px solid #9a30cc;
+}
+
+.form-item input,
+.form-item textarea,
+.form-item button {
+    border: 2px solid #4165bb;;
+    background-color: #FFF;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.form-item button:hover {
+    border: 2px solid #9a30cc;
+    background-color: #9a30cc;
+    color: #FFF;
+}
+
+.form-item button {
+    width: 100px;
+}
 /* boarder 
 * {
     border: 1px solid red;
