--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ p {
     padding: 10px;
 }
 
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
+h2 {
+    font-family: 'Lobster Two', cursive;
     line-height: 2rem;
     color: white;
 }
@@ -66,6 +66,50 @@ img {
     justify-content: center;
     
 }
+
+.portfolio-item-1 {
+    border: 1px solid #4165bb;
+    flex-basis: 45%;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 3px 3px 3px #000;;
+    background-color: white;
+    color:black
+}
+
+.portfolio-item-2 {
+    border: 1px solid #4165bb;
+    flex-basis: 45%;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 3px 3px 3px #000;;
+    background-color: white;
+    color:black
+}
+
+    .portfolio-item-3 {
+        border: 1px solid #4165bb;
+        flex-basis: 45%;
+        margin: 10px;
+        padding: 10px;
+        text-align: center;
+        box-shadow: 3px 3px 3px #000;;
+        background-color: white;
+        color:black
+    }
+
+    .portfolio-item-4 {
+        border: 1px solid #4165bb;
+        flex-basis: 45%;
+        margin: 10px;
+        padding: 10px;
+        text-align: center;
+        box-shadow: 3px 3px 3px #000;;
+        background-color: white;
+        color:black
+    }
 
 footer {
     text-align: center;
