--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ nav {
 
 .button {
     border: 1px solid black;
-    background-color: grey;
+    background-color: #A5A6A6;
     margin: 5px;
     box-shadow: 2px 2px 2px #000;
     
