--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
 
 p {
     text-align: justify;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: white;
     color: black;
     padding: 10px;
@@ -74,6 +74,8 @@ a:hover {
     box-shadow: 3px 3px 3px #000;
     background-color: white;
     color:black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
 
 }
 
